[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wp-to-json"
version = "0.1.0"
description = "Convert WordPress XML exports to JSON"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
wp-to-json = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
